# NSU-labs-1-2-semester

lab0/: CMakeLists.txt
lab0/src/: check.c  check.h  main.c  transfer.c  transfer.h
lab1-0/src/: main.c
lab1-1/: CMakeLists.txt
lab1-1/src/: hash.c  hash.h  main.c  sorting.c  sorting.h
lab11/src/: main.c
lab2/src/: main.c
lab3-0/src/: main.c
lab3-1/src/: main.c
lab4/: CMakeLists.txt
lab4/src/: main.c  stack.c  stack.h
lab5/: CMakeLists.txt
lab5/src/: decoding.c  decoding.h  encoding.c  encoding.h  huffmanCode.c  huffmanCode.h  main.c  priorityQueue.c  priorityQueue.h  stream.c  stream.h  symbolFrequency.c  symbolFrequency.h  tree.c  tree.h
lab6-0/: CMakeLists.txt
lab6-0/src/: main.c  tree.c  tree.h
lab6-1/: CMakeLists.txt
lab6-1/src/: main.c  tree.c  tree.h
lab7/: CMakeLists.txt
lab7/src/: error.c  error.h  main.c  matrix.c  matrix.h  topsort.c  topsort.h
lab8-0/: CMakeLists.txt
lab8-0/src/: error.c  error.h  kruscal.c  kruscal.h  main.c  matrix.c  matrix.h
lab8-1/: CMakeLists.txt
lab8-1/src/: error.c  main.c  matrix.c  matrix.h  prim.c  prim.h
